NixOS rebuild: Generation 122

--- a/apps/xborders/config.json
+++ b/apps/xborders/config.json
@@ -1,5 +1,5 @@
 {
-    "border-rgba": "0x158542ff",
+    "border-rgba": "0x5FD38DFF",
     "border-radius": 14,
     "border-width": 6,
     "border-mode": "outside",
