--- a/apps/i3/config
+++ b/apps/i3/config
@@ -177,7 +177,7 @@ client.urgent           $u-bgcolor      $u-bgcolor      $text           $u-bgcol
 # finds out, if available)
 bar {
 	position top
-    status_command i3blocks
+    status_command i3blocks -c ~/nixos/apps/i3/blocks/config
 	i3bar_command i3bar --transparency
 	strip_workspace_numbers yes
 	font pango: Hack Regular 20,
