--- a/apps/i3/config
+++ b/apps/i3/config
@@ -13,7 +13,7 @@ exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id nm-applet
 
 # start a terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec urxvt -fn "xft:Hurmit Nerd Font Mono:size=13"
 
 # kill focused window
 bindsym $mod+Shift+a kill
