--- a/apps/i3/config
+++ b/apps/i3/config
@@ -2,7 +2,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 #font pango:monospace 12
-font pango:DejaVu Sans Mono 12
+font pango:FiraCode Nerd Font Mono 12
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -180,7 +180,7 @@ bar {
     status_command i3blocks -c ~/nixos/apps/i3/blocks/config
 	i3bar_command i3bar --transparency
 	strip_workspace_numbers yes
-	font pango: Hack Regular 20,
+	font pango: FiraCode Nerd Font Mono 20
 	colors {
                 background $in-bgcolor
                 separator $text
