--- a/apps/i3/config
+++ b/apps/i3/config
@@ -34,7 +34,7 @@ bindsym $mod+F4 exec brightnessctl -d "amdgpu_bl0" set 10%-
 bindsym $mod+F5 exec brightnessctl -d "amdgpu_bl0" set +10%
 
 ## Screenshots
-bindsym Shift+Print exec maim --select "/home/penwing/Pictures/screenshots/$(date).png"
+bindsym Shift+Print exec maim --select "/home/penwing/Pictures/screenshots/$(date '+%H:%M:%S %d_%m_%Y').png"
 
 # change focus
 bindsym $mod+j focus left
