NixOS rebuild: Generation 160

--- a/apps/sddm/theme/theme.conf
+++ b/apps/sddm/theme/theme.conf
@@ -27,10 +27,10 @@ showUsersByDefault=false
 usersFontSize=32
 
 # Path to background image
-background=tree.png
+background=lock.png
 # Or use just one color
 backgroundFill=
-backgroundFillMode=aspect
+backgroundFillMode=fill
 
 # Default text color for all labels
 basicTextColor=#ffffff
