--- a/apps/sddm/theme/theme.conf
+++ b/apps/sddm/theme/theme.conf
@@ -30,7 +30,7 @@ usersFontSize=32
 background=lock.png
 # Or use just one color
 backgroundFill=
-backgroundFillMode=crop
+backgroundFillMode=
 
 # Default text color for all labels
 basicTextColor=#ffffff
