NixOS rebuild: Generation 333 - update to nixos 24

--- a/scripts/.shell_config
+++ b/scripts/.shell_config
@@ -44,5 +44,8 @@ fi
 bind 'set show-all-if-ambiguous on'
 bind 'TAB:menu-complete'
 
+
+export NNN_OPTS="H"
+
 export STARSHIP_CONFIG=~/nixos/apps/urxvt/starship.toml
 eval "$(starship init bash)"
